<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textBaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/latihan_persistance"
        android:textStyle="bold"
        android:paddingBottom="50dp"
        android:textSize="25sp"
        />

    <Button
        android:text="@string/internal_storage"
        android:id="@+id/buttonInternalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/external_storage"
        android:id="@+id/buttonExternalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>